[gd_scene load_steps=4 format=3 uid="uid://c2cq5jjjb88ml"]

[ext_resource type="Script" path="res://scripts/camera.gd" id="1_veevr"]
[ext_resource type="Texture2D" uid="uid://xjxqsd8lwvkj" path="res://Assets/Sprites/cam overlay/overlay.png" id="2_ew7ih"]
[ext_resource type="Script" uid="uid://kfhwmdde8u2a" path="res://scripts/overlay.gd" id="3_uwrrs"]

[node name="MainCamera" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_veevr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="camoverlay" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("3_uwrrs")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/camoverlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ew7ih")

[node name="Label_Title" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 519.0
offset_right = 134.0
offset_bottom = 561.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Tile Info:"

[node name="Label_TileType" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 562.0
offset_right = 366.0
offset_bottom = 604.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Terrain:"

[node name="Label_MovementCost" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 600.0
offset_right = 364.0
offset_bottom = 642.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Cost:"

[node name="Label_Position" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 636.0
offset_right = 373.0
offset_bottom = 678.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Position:"

[node name="Label_Resource" type="Label" parent="CanvasLayer/camoverlay/TextureRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 669.0
offset_right = 379.0
offset_bottom = 711.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Resources:"

[node name="Button" type="Node" parent="CanvasLayer/camoverlay/TextureRect"]

[node name="MoveButton" type="Button" parent="CanvasLayer/camoverlay/TextureRect/Button"]
offset_left = 1081.0
offset_top = 567.0
offset_right = 1270.0
offset_bottom = 710.0
text = "Move"

[connection signal="pressed" from="CanvasLayer/camoverlay/TextureRect/Button/MoveButton" to="CanvasLayer/camoverlay" method="_on_move_button_pressed"]
