extends Sprite2D

@onready var label_tile_type: Label = $Label_TileType
@onready var label_movement_cost: Label = $Label_MovementCost
@onready var label_position: Label = $Label_Position
@onready var label_resource: Label = $Label_Resource

#func update_tile_info(tile):
	#if tile == null:
		#clear_info()
		#return
	#label_tile_type.text = 




# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
